// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders when data  is passed as prop 1`] = `
Array [
  <tr>
    <td
      className="flex items-stretch border border-gray-400 border-collapse p-0"
    >
      <button
        className="flex text-xl px-3 py-3 h-100 w-100 bg-embl-primary-blue text-white w-full h-full justify-center "
        onClick={[Function]}
      >
        +
      </button>
    </td>
    <td
      className="text-embl-primary-blue px-2 border-collapse border border-gray-400 leading-3"
    >
      <a
        href="https://platform.opentargets.org/target/epidermal growth factor receptor"
        rel="noopener noreferrer"
        target="_blank"
      >
        EGFR
      </a>
    </td>
    <td
      className="px-2 border-collapse border border-gray-400"
    >
      epidermal growth factor receptor
    </td>
    <td
      className="px-2 border-collapse border border-gray-400"
    >
      0.890
    </td>
  </tr>,
  <tr
    className="hidden"
  >
    <td
      className="border border-gray-400"
      colSpan="4"
    >
      <div
        className="tab-container my-2 mx-5"
      >
        <div
          className="tab-list flex border-gray-400 border-b-2"
        >
          <span
            className=" px-4 cursor-pointer bg-embl-primary-blue text-white"
            onClick={[Function]}
          >
            Bar chart
          </span>
          <span
            className=" px-4 cursor-pointer bg-white text-embl-primary-blue"
            onClick={[Function]}
          >
            Radar chart
          </span>
        </div>
        <div
          className="flex h-80 justify-center items-center"
        >
          <canvas
            className="max-h-full max-w-full"
            height={150}
            role="img"
            width={300}
          />
        </div>
      </div>
    </td>
  </tr>,
]
`;

exports[`renders when no data  is passed as prop 1`] = `
Array [
  <tr>
    <td
      className="flex items-stretch border border-gray-400 border-collapse p-0"
    >
      <button
        className="flex text-xl px-3 py-3 h-100 w-100 bg-embl-primary-blue text-white w-full h-full justify-center "
        onClick={[Function]}
      >
        +
      </button>
    </td>
    <td
      className="text-embl-primary-blue px-2 border-collapse border border-gray-400 leading-3"
    >
      <a
        href="https://platform.opentargets.org/target/undefined"
        rel="noopener noreferrer"
        target="_blank"
      />
    </td>
    <td
      className="px-2 border-collapse border border-gray-400"
    />
    <td
      className="px-2 border-collapse border border-gray-400"
    />
  </tr>,
  <tr
    className="hidden"
  >
    <td
      className="border border-gray-400"
      colSpan="4"
    >
      <div
        className="tab-container my-2 mx-5"
      >
        <div
          className="tab-list flex border-gray-400 border-b-2"
        >
          <span
            className=" px-4 cursor-pointer bg-embl-primary-blue text-white"
            onClick={[Function]}
          >
            Bar chart
          </span>
          <span
            className=" px-4 cursor-pointer bg-white text-embl-primary-blue"
            onClick={[Function]}
          >
            Radar chart
          </span>
        </div>
        <div
          className="flex h-80 justify-center items-center"
        >
          <canvas
            className="max-h-full max-w-full"
            height={150}
            role="img"
            width={300}
          />
        </div>
      </div>
    </td>
  </tr>,
]
`;
